<resources>
    <string name="app_name">Gestura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invalid_email">Format email is invalid!</string>
    <string name="min_length_char">Minimal Length %1$d characters</string>
    <string name="message_validation">Enter your %1$s</string>
    <string name="login_error">Cannot Login, please check again!</string>
    <string name="signup_error">Cannot Signup, please check again!</string>
    <string name="logout">Logout</string>

    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="halo">Halo,</string>
    <string name="john_doe">John Doe</string>
    <string name="ayo_jelajahi_dunia_tuli_bersama_kami">Ayo jelajahi dunia tuli bersama kami!</string>
    <string name="john_doe_email">johndoe@gmail.com</string>
    <string name="faq">FAQ</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="ketentuan_layanan">Ketentuan Layanan</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="tentang_kami">Tentang Kami</string>

    <string name="app_slogan">Let\'s overcome \n the language barrier</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="create_new_account">Create new account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="sign_up_to_join_us">Sign up to join us</string>
    <string name="create_account">Create \nAccount</string>
    <string name="for_you">For you</string>
    <string name="expand_icon">Expand Icon</string>
    <string name="have_an_acccount">Have an acccount?</string>
    <string name="hi">Hi,</string>
    <string name="huruf">Huruf</string>
    <string name="kata">Kata</string>
</resources>